2007-11-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-mini-object.c: supported dynamically name resolving.

	* src/rbgst-buffer.c: implemented metatdata_writable API.
	* test/test_buffer.rb: added tests for metadata_writable.

	* src/rbgst-buffer.c: implemented copy_metatdata API.
	* test/test_buffer.rb: added tests for copy_metadata.

	* src/rbgst-buffer.c: implemented GstBufferCopyFlags API.
	* test/test_buffer.rb: added tests for GstBufferCopyFlags.

	* src/rbgst-buffer.c: implemented disconitnuity API.
	* test/test_buffer.rb: added tests for disconitnuity.

	* src/rbgst-buffer.c: implemented offset_end API.
	* test/test_buffer.rb: added tests for offset_end.

	* src/rbgst-buffer.c: implemented offset API.
	* test/test_buffer.rb: added tests for offset.

	* src/rbgst-buffer.c: used GST_BUFFER_CAPS instead of
	gst_buffer_get_caps().

	* src/rbgst-buffer.c: used macros for GstBuffer.

	* src/rbgst-buffer.c: implemented caps API.
	* test/test_buffer.rb: added tests for caps.

	* src/rbgst-buffer.c: implemented duration API.
	* test/test_buffer.rb: added tests for duration.

2007-11-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-buffer.c: implemented timestamp API.
	* test/test_buffer.rb: added a test for timestamp.

	* src/rbgst.h, src/rbgst-clock.c, src/rbgstclock.c: rewrote clock.
	* test/test_clock.rb: added.

	* src/rbgst-buffer.c: implemented size setter.
	* test/test_buffer.rb: added test for setting size.

	* src/rbgst-buffer.c: implemented data accessor.
	* test/test_buffer.rb: added test for data.

	* src/rbgst-buffer.c: implemented size.
	* test/test_buffer.rb: added test for size.

	* src/rbgst.h (RVAL2GST_BUF): added.
	* src/rbgst-buffer.c: added flag related API.
	* test/test_buffer.rb: added.

	* src/rbgst-mini-object.c: implemented flags related APIs.
	* test/test_mini_object.rb: added tests for flags.

	* test/run-test.rb: added paths for Ruby/GLib.

2007-11-05  Kouhei Sutou  <kou@cozmixng.org>
