@@ -1,5 +1,8 @@
 2007-11-10  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-buffer.c: implemented span API.
+	* test/test_buffer.rb: added tests for span.
+
 	* src/rbgst-mini-object.c: supported dynamically name resolving.
 
 	* src/rbgst-buffer.c: implemented metatdata_writable API.
